osx tex packages

--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -36,6 +36,9 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           tlmgr install pdftexcmds
+          tlmgr install kvoptions
+          tlmgr install letltxmacro
+          tlmgr install cm-super
 
       - name: Cache R packages
         uses: actions/cache@v1
